--- a/appinsight.json
+++ b/appinsight.json
@@ -4,6 +4,7 @@
   "parameters": {
     "location": {
       "type": "string",
+      "Value": "westeurope",
       "defaultValue": "[resourceGroup().location]",
       "metadata": {
         "description": "Location for all resources."
