--- a/appinsight.json
+++ b/appinsight.json
@@ -1,30 +1,18 @@
 {
-  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
-  "contentVersion": "1.0.0.0",
-  "parameters": {
-    "location": {
-      "type": "string",
-      "value": "westeurope",
-      "defaultValue": "[resourceGroup().location]",
-      "metadata": {
-        "description": "Location for all resources."
-      }
-    }
-  },
-  "variables": {
-    "appInsName": "appIniCheck",
-    "responseAlertName": "[concat('ResponseTime-', toLower(variables('appInsName')))]"
-  },
-  "resources": [
-    {
-      "apiVersion": "2014-04-01",
-      "name": "[variables('appInsName')]",
-      "type": "Microsoft.Insights/components",
-      "location": "[parameters('location')]",
-      "properties": {
-        "ApplicationId": "[variables('appInsName')]"
-      }
-    }
-  ],
-  "outputs": {}
+    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
+    "contentVersion": "1.0.0.0",
+    "parameters": {},
+    "variables": {},
+    "resources": [
+        {
+            "type": "microsoft.insights/components",
+            "apiVersion": "2015-05-01",
+            "name": "azftestsgcgr",
+            "location": "westeurope",
+            "kind": "web",
+            "properties": {
+                "Application_Type": "web"
+            }
+        }
+    ]
 }
